--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ section.features {
 	padding-bottom: 0;
 }
 
-.feature-title {
+.feature-title .checkbox {
 	position: absolute;
 	width: 1px;
 	height: 1px;
@@ -511,6 +511,62 @@ address > a {
 	fill: #ffffff;
 }
 
+.subscription-title{
+	margin: 0;
+	margin-bottom: 20px;
+
+	font-weight: 700;
+		font-size: 14px;
+		line-height: 1.14;
+		letter-spacing: 0.03em;
+		text-transform: uppercase;
+			color: #FFFFFF;
+}
+
+.subscription-input{
+	margin-right: 12px;
+
+	width: 358px;
+	height: 50px;
+	padding: 15px 16px;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+		filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+		border-radius: 4px;
+		background-color: transparent;
+
+}
+
+.subscription-input::placeholder{
+	font-weight: 400;
+		font-size: 16px;
+		line-height: 1.25x;
+		letter-spacing: 0.03em;
+		color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-submit{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10px;
+	width: 200px;
+	height: 50px;
+	font-weight: 700;
+		font-size: 16px;
+		line-height: 1.88%;
+				letter-spacing: 0.06em;
+	background-color: var(--accent-color);
+		color: #FFFFFF;
+border-radius: 4px;
+border: none;
+
+}
+
+/* .subscription-submit:not():hover{
+	border: none;
+
+} */
+
 /* -------------PORTFOLIO---------------- */
 
 .portfolio {
@@ -701,6 +757,7 @@ button:focus {
 
 .modal-icon {
 	fill: #000000;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 button.btn-modal {
@@ -718,7 +775,13 @@ button.btn-modal {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 50%;
 	box-shadow: none;
+	fill: #2196F3;
 }
+
+.btn-modal:hover .modal-icon, .btn-modal:focus .modal-icon{
+	fill: var(--accent-color);
+}
+
 .is-hidden {
 	opacity: 0;
 	visibility: hidden;
@@ -726,7 +789,7 @@ button.btn-modal {
 }
 .modal-title{
 	margin: 0;
-margin-bottom: 12px;
+margin-bottom: 30px;
 
 	font-weight: 700;
 		font-size: 20px;
@@ -740,24 +803,38 @@ margin-bottom: 12px;
 .modal-field{
 	display: flex;
 	flex-direction: column;
-	width: 528px;
+		width: 528px;
 		height: 581px;
 		margin-left: auto;
 		margin-right: auto;
 	padding: 40px;
 }
 
-.modal-field input{
-	margin-bottom: 10px;
+.form-field input{
+	
 	width: 100%;
 	height: 40px;
 
-	border: 1px solid #2196F3;
+	
 	border: 1px solid rgba(33, 33, 33, 0.2);
 		border-radius: 4px;
 }
 
-.modal-field label{
+.form-field input:hover, 
+.form-field textarea:focus,
+ .form-field textarea:hover,
+.form-field input:focus{
+border: 1px solid #2196F3;
+}
+
+
+
+.form-field label{
+	position: absolute;
+	left: 0;
+	top: -4px;
+	transform: translateY(-100%);
+
 margin-bottom: 4px;
 
 	font-weight: 400;
@@ -768,14 +845,29 @@ margin-bottom: 4px;
 
 }
 
+.form-field{
+	margin-bottom: 28px;
+
+	display: flex;
+	flex-direction: column;
+	position: relative;
+}
+
 textarea{
 	resize: none;
-	margin-bottom: 20px;
-	padding: 20px 16px 12px 16px;
+		padding: 20px 16px 12px 16px;
 	width: 100%;
 	height: 120px; 
 	border: 1px solid rgba(33, 33, 33, 0.2);
 		border-radius: 4px;
+}
+
+textarea::placeholder{
+	font-weight: 400;
+		font-size: 12px;
+		line-height: 1.17;
+		letter-spacing: 0.01em;
+			color: rgba(117, 117, 117, 0.5);
 }
 
 .modal-checkbox{
@@ -785,11 +877,21 @@ textarea{
 	.modal-checkbox label{
 		display: flex;
 		align-items: center;
+		padding-left: 20px;
+
 font-weight: 400;
 	font-size: 14px;
 	line-height: 1.71;
 	letter-spacing: 0.03em;
 	color: #757575;
+	}
+	.chekbox-text{
+		margin-left: 20px;
+	}
+
+	.check-icon{
+
+		fill: #FFFFFF;
 	}
 
 	.modal-checkbox a{
@@ -797,14 +899,40 @@ font-weight: 400;
 		color: rgba(33, 150, 243, 1);
 	}
 
-.modal-field input[type="checkbox"]{
-	width: 15px;
-	height: 16px;
-	margin-bottom: 0;
-	margin-right: 8px;
-
-	
+	.check-box{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		position: absolute;
+		width: 16px;
+		height: 15px;
+		background: #FFFFFF;
+		
+		border: 2px solid black;
+		border-radius: 2px;
+		transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+		transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	}
+
+	.checkbox:checked + .check-box{
+		background: var(--accent-color);
+		border: none;
+	}
+
+
+		.checkbox{
+position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	white-space: nowrap;
+	clip-path: inset(100%);
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+		}
 
 .modal-submit{
 	margin-left: auto;
@@ -824,3 +952,15 @@ font-weight: 400;
 			color: #FFFFFF;
 }
 
+.form-icon{
+	position: absolute;
+	height: 18px;
+	top: 50%;
+	left: 12px;
+	transform: translateY(-50%);
+	}
+
+.form-field input:hover+.form-icon,
+.form-field input:focus+.form-icon {
+	fill: var(--accent-color);
+}
