--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,7 @@ address > a {
 	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 	border-radius: 4px;
 	background-color: transparent;
+	cursor: pointer;
 }
 
 .subscription-input::placeholder {
@@ -568,6 +569,7 @@ address > a {
 	color: #ffffff;
 	border-radius: 4px;
 	border: none;
+	cursor: pointer;
 }
 
 /* -------------PORTFOLIO---------------- */
@@ -779,6 +781,7 @@ button.btn-modal {
 	border-radius: 50%;
 	box-shadow: none;
 	fill: #2196f3;
+	cursor: pointer;
 }
 
 .btn-modal:hover .modal-icon,
@@ -817,9 +820,11 @@ button.btn-modal {
 .form-field input {
 	width: 100%;
 	height: 40px;
+	padding-left: 40px;
 
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
+	cursor: pointer;
 	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -828,6 +833,11 @@ button.btn-modal {
 .form-field textarea:hover,
 .form-field input:focus {
 	border: 1px solid #2196f3;
+}
+
+.form-field textarea:focus-visible,
+.form-field input:focus-visible{
+	outline: none;
 }
 
 .form-field label {
@@ -860,6 +870,7 @@ textarea {
 	height: 120px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
+	cursor: pointer;
 	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -873,6 +884,7 @@ textarea::placeholder {
 
 .modal-checkbox {
 	margin-bottom: 30px;
+	
 }
 
 .modal-checkbox label {
@@ -885,7 +897,9 @@ textarea::placeholder {
 	line-height: 1.71;
 	letter-spacing: 0.03em;
 	color: #757575;
-}
+	cursor: pointer;
+	}
+
 .chekbox-text {
 	margin-left: 20px;
 }
@@ -910,6 +924,7 @@ textarea::placeholder {
 
 	border: 2px solid black;
 	border-radius: 2px;
+	cursor: pointer;
 	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	
@@ -949,6 +964,7 @@ textarea::placeholder {
 	line-height: 1.88;
 	letter-spacing: 0.06em;
 	color: #ffffff;
+	cursor: pointer;
 }
 
 .form-icon {
