--- a/css/styles.css
+++ b/css/styles.css
@@ -179,7 +179,7 @@ section.features {
 	padding-bottom: 0;
 }
 
-.feature-title .checkbox {
+.feature-title, .checkbox {
 	position: absolute;
 	width: 1px;
 	height: 1px;
@@ -438,7 +438,8 @@ section.features {
 footer > .container {
 	display: flex;
 	align-items: baseline;
-	gap: 70px;
+	justify-content: space-between;
+	
 }
 
 .footer-container {
@@ -884,12 +885,14 @@ textarea::placeholder {
 
 .modal-checkbox {
 	margin-bottom: 30px;
+	position: relative;
 	
 }
 
 .modal-checkbox label {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	padding-left: 20px;
 
 	font-weight: 400;
@@ -909,6 +912,11 @@ textarea::placeholder {
 }
 
 .modal-checkbox a {
+	
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
 	margin-left: 4px;
 	color: rgba(33, 150, 243, 1);
 }
@@ -918,6 +926,8 @@ textarea::placeholder {
 	align-items: center;
 	justify-content: center;
 	position: absolute;
+	left: 20px;
+	top: 5px;
 	width: 16px;
 	height: 15px;
 	background: #ffffff;
@@ -927,7 +937,6 @@ textarea::placeholder {
 	cursor: pointer;
 	transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
 }
 
 .checkbox:checked + .check-box {
